src/objects/TR1__Expense_Report__c.object
<CustomObject>
    <fields>
        <fullName>All_Approver__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Timesheet_Approver__c+&apos;;&apos; 
+TR1__Closing_Report__r.Timesheet_Third_Approver__c+&apos;;&apos; 
+TR1__Closing_Report__r.TR1__Timesheet_Second_Approver__c+&apos;;&apos; 
+TR1__Closing_Report__r.Timesheet_Fourth_Approver__c+&apos;;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Reports (Approver Contact)</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Account_Name__c</fullName>
        <formula>TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Approver_Name__c</fullName>
        <formula>IF((NOT(ISNULL(TR1__Approver__c))) &amp;&amp; (NOT(ISBLANK(TR1__Approver__c))) ,IF((NOT(ISNULL(TR1__Approver__r.LastName) &amp;&amp; NOT(ISBLANK(TR1__Approver__r.LastName))) &amp;&amp; NOT(ISNULL(TR1__Approver__r.FirstName) || NOT(ISBLANK(TR1__Approver__r.FirstName)))), 
TR1__Approver__r.LastName &amp;&quot;, &quot;&amp;  TR1__Approver__r.FirstName, IF(NOT(ISNULL(TR1__Approver__r.LastName) || NOT(ISBLANK(TR1__Approver__r.LastName))), TR1__Approver__r.LastName, TR1__Approver__r.FirstName)
),&quot;&quot;)</formula>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Consultant_Name__c</fullName>
        <formula>IF(NOT(ISNULL(TR1__Consultant__c)) &amp;&amp; NOT(ISBLANK(TR1__Consultant__c)),IF((NOT(ISNULL(TR1__Consultant__r.LastName) &amp;&amp; NOT(ISBLANK(TR1__Consultant__r.LastName))) &amp;&amp; NOT(ISNULL(TR1__Consultant__r.FirstName) &amp;&amp; NOT(ISBLANK(TR1__Consultant__r.FirstName)))), TR1__Consultant__r.LastName &amp; &quot;, &quot; &amp;  TR1__Consultant__r.FirstName, IF(NOT(ISNULL(TR1__Consultant__r.LastName) || NOT(ISBLANK(TR1__Consultant__r.LastName))), TR1__Consultant__r.LastName, TR1__Consultant__r.FirstName)
),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Acc:11/16: WO-008895--Created for Auto populating Expense Approver with CR Expense Approver.</description>
        <label>Expense Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Reports (Expense Approver)</relationshipLabel>
        <relationshipName>ExpenseReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Period_End__c</fullName>
        <label>Expense Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Period_Start__c</fullName>
        <label>Expense Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report_Approved_Date_Time__c</fullName>
        <label>Expense Report Approved Date/Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report_Total__c</fullName>
        <formula>TR1__Total_Mileage__c +  TR1__Non_Mileage_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Report Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__GP_Amount__c</fullName>
        <description>Sum of Line items GP Amount</description>
        <label>GP Amount</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__GP_Amount__c</summarizedField>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Non_Mileage_Total__c</fullName>
        <label>Non-Mileage Total</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Mileage</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsubmitted</fullName>
                    <default>true</default>
                    <label>Unsubmitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__TotalBillableAmount__c</fullName>
        <description>W-008391 :- Captures the total billable amount of Expense Line item</description>
        <label>Total Billable Amount</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Billable_Amount__c</summarizedField>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Cell_Phone_Amount__c</fullName>
        <label>Total Cell Phone Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Client_Gift__c</fullName>
        <label>Total Client Gift</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Gift</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Home_DSL_Amount__c</fullName>
        <label>Total Home DSL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Lodging_Amount__c</fullName>
        <label>Total Lodging Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Lodging__c</fullName>
        <label>Total Lodging</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lodging</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Meals_Entertainment_Amount__c</fullName>
        <label>Total Meals &amp; Entertainment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Meals_Entertainment__c</fullName>
        <label>Total Meals &amp; Entertainment</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Meals &amp; Entertainment</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Mileage_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Mileage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Mileage__c</fullName>
        <label>Total Mileage</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Mileage_Amount__c</summarizedField>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Other_Amount__c</fullName>
        <label>Total Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Other_Transportation_Parking_Amo__c</fullName>
        <label>Total Other Transportation &amp; Parking Amo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Other__c</fullName>
        <label>Total Other</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Transportation_Parking__c</fullName>
        <label>Total Other Transportation &amp; Parking</label>
        <summarizedField>TR1__Expense_Report_Detail__c.TR1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Expense_Report_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transportation &amp; Parking</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Expense_Report_Detail__c.TR1__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__Submitted</fullName>
        <columns>NAME</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TR1__Expense_Report__c.TR1__Internal_Expense</value>
        </filters>
        <label>Submitted</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <recordTypes>
        <fullName>TR1__Expense_Portal</fullName>
        <active>true</active>
        <label>Expense Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Internal_Expense</fullName>
        <active>true</active>
        <label>Internal Expense</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Comparision_for_Start_and_End_Date</fullName>
        <active>true</active>
        <description>Start date should not be less then End date</description>
        <errorConditionFormula>TR1__Expense_Period_End__c &lt; TR1__Expense_Period_Start__c</errorConditionFormula>
        <errorMessage>Expense Period End Date should be greater then Expense Period Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Approver_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( $Profile.Name = &apos; Talent Rover Approver&apos;, NOT(AND(ISPICKVAL(TR1__Status__c, &apos;Submitted&apos;) , ISPICKVAL(TR1__Status__c, &apos;Approved&apos;) )),false)</errorConditionFormula>
        <errorMessage>An approver can&apos;t update an unsubmitted or rejected Expense Report</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Consultant_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( $Profile.Name = &apos; Talent Rover Consultant&apos;, AND(ISPICKVAL(TR1__Status__c, &apos;Submitted&apos;) , ISPICKVAL(TR1__Status__c, &apos;Approved&apos;) ),false)</errorConditionFormula>
        <errorMessage>A Consultant can&apos;t update an Approved or Submitted Expense Report</errorMessage>
    </validationRules>
</CustomObject>